Updated to Fuse v6.2.4

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,7 @@
 {
-    "singleQuote": true
+  "singleQuote": true,
+  "tabWidth": 4,
+  "arrowParens": "always",
+  "requirePragma": true,
+  "insertPragma": true
 }
