--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
     "name": "blocksale",
     "description": "Blockchain ICO UX web application",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "license": "(MIT OR Apache-2.0)",
     "author": {
         "name": "Ezra Aqui N. Diaz",
         "email": "ezra.aqui.n.diaz@accenture.com"
     },
+    "bugs": {
+        "url": "https://github.com/corswain/Blocksale/issues"
+    },
+    "homepage": "https://github.com/corswain/Blocksale",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve --port 4300 --aot --open",
-        "start-hmr": "ng serve --port 4300 --configuration=hmr --open",
+        "start": "ng serve --aot --open",
+        "start-hmr": "ng serve --configuration=hmr --open",
         "start-hmr-sourcemaps": "ng serve --configuration hmr --source-map=true --hmr-warning=false",
-        "build": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build --dev",
+        "build": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build --prod",
         "build-stats": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build --dev --stats-json",
         "build-prod": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build --prod",
         "build-prod-stats": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build --prod --stats-json",
@@ -23,19 +27,19 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "6.0.7",
+        "@angular/animations": "6.0.9",
         "@angular/cdk": "6.3.3",
-        "@angular/common": "6.0.7",
-        "@angular/compiler": "6.0.7",
-        "@angular/core": "6.0.7",
+        "@angular/common": "6.0.9",
+        "@angular/compiler": "6.0.9",
+        "@angular/core": "6.0.9",
         "@angular/flex-layout": "6.0.0-beta.16",
-        "@angular/forms": "6.0.7",
-        "@angular/http": "6.0.7",
+        "@angular/forms": "6.0.9",
+        "@angular/http": "6.0.9",
         "@angular/material": "6.3.3",
         "@angular/material-moment-adapter": "6.3.3",
-        "@angular/platform-browser": "6.0.7",
-        "@angular/platform-browser-dynamic": "6.0.7",
-        "@angular/router": "6.0.7",
+        "@angular/platform-browser": "6.0.9",
+        "@angular/platform-browser-dynamic": "6.0.9",
+        "@angular/router": "6.0.9",
         "@ngx-translate/core": "10.0.2",
         "@swimlane/ngx-charts": "8.1.0",
         "@swimlane/ngx-datatable": "13.0.1",
@@ -53,7 +57,7 @@
         "lodash": "4.17.10",
         "moment": "2.22.2",
         "ng2-charts": "1.6.0",
-        "ngx-color-picker": "6.4.0",
+        "ngx-color-picker": "6.5.0",
         "ngx-cookie-service": "1.0.10",
         "perfect-scrollbar": "1.4.0",
         "prismjs": "1.15.0",
@@ -63,15 +67,15 @@
         "zone.js": "0.8.26"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.6.8",
         "@angular/cli": "6.0.8",
-        "@angular/compiler-cli": "6.0.7",
-        "@angular/language-service": "6.0.7",
+        "@angular/compiler-cli": "6.0.9",
+        "@angular/language-service": "6.0.9",
+        "@angular-devkit/build-angular": "0.6.8",
         "@angularclass/hmr": "2.1.3",
         "@types/highcharts": "5.0.25",
         "@types/jasmine": "2.8.8",
         "@types/jasminewd2": "2.0.3",
-        "@types/lodash": "4.14.110",
+        "@types/lodash": "4.14.111",
         "@types/node": "8.9.5",
         "codelyzer": "4.2.1",
         "jasmine-core": "2.99.1",
